# job-scout

./: .gitignore  BUILD_PROMPT.md  CLAUDE.md  LICENSE  PLAN_extension.md  PLAN_reddit_and_autoapply.md  README.md  config.example.yaml  config.yaml  pyproject.toml  resume.example.txt  seen.db  tasks.md
.claude/: settings.local.json
.github/workflows/: daily.yml
digests/: 2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-16.md  2026-05-17.md
radar/: __init__.py  __main__.py  config.py  dedup.py  filters.py  models.py
radar/output/: email.py  markdown.py
radar/output/templates/: digest.html.j2  digest.md.j2
radar/resume/: normalizer.py  parser.py
radar/scoring/: llm.py  rule_based.py
radar/sources/: base.py  findwork.py  himalayas.py  hn_hiring.py  instahyre.py  jobicy.py  reddit.py  remoteok.py  remotive.py  upwork.py  weworkremotely.py  yc_work.py
tests/: conftest.py  test_dedup.py  test_filters.py  test_integration.py  test_reddit_source.py  test_resume_parser.py  test_scoring_rule_based.py
tests/fixtures/: hn_comments_response.json  hn_thread_response.json  remoteok_response.json  remotive_response.json  weworkremotely_response.xml
